resovle BitModal dragging issues on mobile devices #4082

--- a/src/BlazorUI/Bit.BlazorUI/Components/Modal/BitModal.scss
+++ b/src/BlazorUI/Bit.BlazorUI/Components/Modal/BitModal.scss
@@ -10,6 +10,14 @@
     width: 100%;
     height: 100%;
 
+    .no-touch-action {
+        touch-action: none;
+
+        * {
+            touch-action: none;
+        }
+    }
+
     &.absolute {
         position: absolute;
         z-index: unset;
